versioned_docs/version-2026.1.3/turma/ein/ein2024-dp.mdx
---
slug: /turma/ein2024-dp
sidebar_label: EIN2024-DP
---
import { Grid } from "@site/src/components/Grid";
import BrowserOnly from "@docusaurus/BrowserOnly";

export const data = {
  "title": "EIN2024-DP",
  "base": "EIN",
  "weekClasses": [
    {
      "dayName": "Segunda-Feira",
      "dayClasses": [
        {
          "subject": "DESENHO TÉCNICO (513)",
          "size": 1,
          "teachers": [
            "Sérgio Takahashi"
          ],
          "classroom": "laboratorio_de_desenho_tecnico_sala_5-2",
          "students": [
            "EIN2024-DP"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        },
        {
          "subject": "LÍNGUA PORTUGUESA I (518)",
          "size": 1,
          "teachers": [
            "Patricia Denicolo David Prati"
          ],
          "classroom": "sala_6-2",
          "students": [
            "EIN2024-DP"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        },
        {
          "subject": "SOCIOLOGIA II (521)",
          "size": 1,
          "teachers": [
            "Olavo Henrique Vieira Veiga-Sociologia"
          ],
          "classroom": "a_definir",
          "students": [
            "EIN2024-DP"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        },
        {
          "subject": "DESENHO TÉCNICO (513)",
          "size": 1,
          "teachers": [
            "Sérgio Takahashi"
          ],
          "classroom": "laboratorio_de_desenho_tecnico_sala_5-2",
          "students": [
            "EIN2024-DP"
          ],
          "time": "14:00 - 14:50",
          "color": ""
        },
        {
          "subject": "LÍNGUA PORTUGUESA I (518)",
          "size": 1,
          "teachers": [
            "Patricia Denicolo David Prati"
          ],
          "classroom": "sala_6-2",
          "students": [
            "EIN2024-DP"
          ],
          "time": "14:00 - 14:50",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Terça-Feira",
      "dayClasses": [
        {
          "subject": "MATEMÁTICA II (519)",
          "size": 1,
          "teachers": [
            "Jonatan Ismael Eisermann"
          ],
          "classroom": "sala_11-2",
          "students": [
            "EIN2024-DP"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        },
        {
          "subject": "FILOSOFIA I (514)",
          "size": 1,
          "teachers": [
            "André Alexandre Valentini"
          ],
          "classroom": "a_definir",
          "students": [
            "EIN2024-DP"
          ],
          "time": "14:00 - 14:50",
          "color": ""
        },
        {
          "subject": "MATEMÁTICA II (519)",
          "size": 1,
          "teachers": [
            "Jonatan Ismael Eisermann"
          ],
          "classroom": "sala_11-2",
          "students": [
            "EIN2024-DP"
          ],
          "time": "14:00 - 14:50",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Quarta-Feira",
      "dayClasses": [
        {
          "subject": "GEOGRAFIA II (516)",
          "size": 1,
          "teachers": [
            "Alexandre Roberto Valcarenghi"
          ],
          "classroom": "a_definir",
          "students": [
            "EIN2024-DP"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        },
        {
          "subject": "QUÍMICA II (520)",
          "size": 2,
          "teachers": [
            "Sabrina Kerkhoff"
          ],
          "classroom": "a_definir",
          "students": [
            "EIN2024-DP"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Quinta-Feira",
      "dayClasses": [
        {
          "subject": "FÍSICA I (722)",
          "size": 1,
          "teachers": [
            "Vinicius de Souza Lamego"
          ],
          "classroom": "a_definir",
          "students": [
            "EIN2024-DP"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        },
        {
          "subject": "FÍSICA II (515)",
          "size": 1,
          "teachers": [
            "Vinicius de Souza Lamego"
          ],
          "classroom": "a_definir",
          "students": [
            "EIN2024-DP"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        },
        {
          "subject": "LÍNGUA ESTRANGEIRA MODERNA I - INGLÊS (517)",
          "size": 1,
          "teachers": [
            "Patricia Denicolo David Prati"
          ],
          "classroom": "a_definir",
          "students": [
            "EIN2024-DP"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        },
        {
          "subject": "FÍSICA I (722)",
          "size": 1,
          "teachers": [
            "Vinicius de Souza Lamego"
          ],
          "classroom": "a_definir",
          "students": [
            "EIN2024-DP"
          ],
          "time": "14:00 - 14:50",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Sexta-Feira",
      "dayClasses": [
        {
          "subject": "LÍNGUA ESTRANGEIRA MODERNA - ESPANHOL (726)",
          "size": 1,
          "teachers": [
            "Michelli Cristina Galli"
          ],
          "classroom": "laboratorio_de_computacao_aplicada",
          "students": [
            "EIN2024-DP"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        }
      ]
    }
  ],
  "time": [
    {
      "time": "07:30 - 08:20",
      "size": 50
    },
    {
      "time": "08:20 - 09:10",
      "size": 50
    },
    {
      "time": "09:25 - 10:15",
      "size": 50
    },
    {
      "time": "10:15 - 11:05",
      "size": 50
    },
    {
      "time": "11:05 - 11:55",
      "size": 50
    },
    {
      "time": "13:10 - 14:00",
      "size": 50
    },
    {
      "time": "14:00 - 14:50",
      "size": 50
    },
    {
      "time": "15:05 - 15:55",
      "size": 50
    },
    {
      "time": "15:55 - 16:45",
      "size": 50
    },
    {
      "time": "16:45 - 17:35",
      "size": 50
    },
    {
      "time": "19:00 - 19:50",
      "size": 50
    },
    {
      "time": "19:50 - 20:40",
      "size": 50
    },
    {
      "time": "21:00 - 21:50",
      "size": 50
    },
    {
      "time": "21:50 - 22:40",
      "size": 50
    }
  ]
}

# EIN2024-DP

<div>
  {
    <BrowserOnly>
      {() => (
        <Grid
          title={data.title}
          weekClasses={data.weekClasses}
          time={data.time}
        />
      )}
    </BrowserOnly>
  }
</div>
